get watering power
